refactoring the code ( minimizing the code lines)